--- a/src/components/navigation/NavBar.module.css
+++ b/src/components/navigation/NavBar.module.css
@@ -7,5 +7,23 @@
   width: 100%;
   display: flex;
   height: 3em;
-  background: white;
+  background: black;
+  color: white;
+}
+
+.ul {
+  display: flex;
+  margin: 1em;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar a:visited {
+  color: white;
 }
