--- a/src/components/print/MessageBox.module.css
+++ b/src/components/print/MessageBox.module.css
@@ -1,9 +1,25 @@
+.controls-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  margin: 20px 30px;
+}
+
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 10px;
   margin: 20px 30px;
+}
+
+@media only screen and (max-device-width: 768px) {
+  .row {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
 
 .textBox {
