--- a/src/components/navigation/NavBar.module.css
+++ b/src/components/navigation/NavBar.module.css
@@ -6,24 +6,29 @@
   left: 0;
   width: 100%;
   display: flex;
-  height: 3em;
   background: black;
   color: white;
+  height: 3em;
 }
 
 .ul {
   display: flex;
-  margin: 1em;
   flex-direction: row;
   align-items: center;
-  gap: 1em;
+  margin: 0;
 }
 
-.navbar a {
-  color: white;
-  text-decoration: none;
+.ul a {
+  line-height: 3rem;
 }
 
-.navbar a:visited {
-  color: white;
+@media only screen and (max-device-width: 768px) {
+  .navbar {
+    height: 4rem;
+    font-size: 1.5rem;
+  }
+
+  .ul a {
+    line-height: 4rem;
+  }
 }
