--- a/src/components/print/PrintPage.module.css
+++ b/src/components/print/PrintPage.module.css
@@ -1,27 +1,36 @@
 .page {
-  mask: var(--mask);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
-  background: linear-gradient(135deg, #89f7fe 0%, #66a6ff 100%);
+  background: lightgrey;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-  margin: 1em 20px;
 }
 
 .container {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   gap: 20px;
   padding: 20px;
-  min-width: 700px;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-.heading {
+.h1 {
   font-family: "Comic Sans MS", cursive, sans-serif;
-  padding: 1em;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.header img {
+  height: 24px;
+  width: auto;
 }
