--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,5 +4,14 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+html,
+body {
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
 }
