--- a/src/components/print/MessageBox.module.css
+++ b/src/components/print/MessageBox.module.css
@@ -12,7 +12,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  margin: 20px 30px;
 }
 
 @media only screen and (max-device-width: 768px) {
@@ -30,6 +29,8 @@
   border-radius: 5px;
   font-size: 16px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: block;
+  max-width: 100%;
 }
 
 .textBox:disabled {
