--- a/src/components/navigation/FullPage.module.css
+++ b/src/components/navigation/FullPage.module.css
@@ -1,5 +1,6 @@
 .main {
-  margin-top: 3rem;
+  margin: 3rem auto 0 auto;
+  max-width: 1200px;
 }
 
 @media only screen and (max-device-width: 768px) {
