--- a/src/components/projects/ProjectItem.module.css
+++ b/src/components/projects/ProjectItem.module.css
@@ -3,6 +3,10 @@
   flex-direction: row;
   margin: 10px;
   align-items: center;
+  background: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 1em;
 }
 
 @media screen and (max-width: 768px) {
@@ -28,10 +32,6 @@
   color: black;
 }
 
-.h1 {
-  font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
 .h1:hover {
   color: #4caf50;
 }
@@ -43,12 +43,16 @@
 .main {
   flex: 1;
   text-align: center;
+  margin: 10px;
 }
 
 .main img {
   margin: auto;
-  max-height: 200;
+  max-height: 200px;
+  width: 300px;
   object-fit: cover;
+  border: 1px solid #ccc;
+  box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .image-container {
