--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,3 +1,12 @@
 .root {
   padding: 1em;
 }
+
+.rounded-img {
+  height: auto;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+}
